[gd_scene load_steps=32 format=3 uid="uid://d3hws2l6pwpxu"]

[ext_resource type="Texture2D" uid="uid://cy26cpg3rgwyh" path="res://sprites/titlePart1.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bj58trglq2lb5" path="res://scripts/main_menu.gd" id="1_oa1go"]
[ext_resource type="Texture2D" uid="uid://stfi8ty0ndty" path="res://sprites/Untitled.png" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bn4jb3b2e7bnn" path="res://sprites/button.png" id="3_oa1go"]
[ext_resource type="FontFile" uid="uid://mrqi0t7ikihl" path="res://fonts/upheavtt.ttf" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dcei4073ri6j" path="res://sprites/playing-Sheet.png" id="5_jk1qb"]
[ext_resource type="Texture2D" uid="uid://dosv4kche52ht" path="res://sprites/friend.png" id="6_5dd4i"]
[ext_resource type="AudioStream" uid="uid://c6mwfsaqprvtm" path="res://sounds/sci-fi-charge-up-37395.wav" id="6_lgwnu"]
[ext_resource type="AudioStream" uid="uid://ca7uqovw75tvr" path="res://sounds/sorcerer-loop-251868.mp3" id="8_tbmy8"]
[ext_resource type="AudioStream" uid="uid://disrmseugc3yt" path="res://sounds/jump.wav" id="9_jk1qb"]
[ext_resource type="Script" uid="uid://7mq5sxg0mf23" path="res://singletons/DialogManager.gd" id="10_5dd4i"]
[ext_resource type="PackedScene" uid="uid://ch21fqi4fvid4" path="res://scenes/suck.tscn" id="11_lgwnu"]
[ext_resource type="Texture2D" uid="uid://drha36jrow46o" path="res://sprites/screenWipe.png" id="12_flqon"]

[sub_resource type="Animation" id="Animation_5dd4i"]
resource_name = "Continue"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(55, 55)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"moveScene"
}]
}

[sub_resource type="Animation" id="Animation_oa1go"]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fren/AnimatedSprite2D2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"walk", &"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fren/AnimatedSprite2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1080, 88), Vector2(0, 88)]
}

[sub_resource type="Animation" id="Animation_tbmy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fren/AnimatedSprite2D2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fren/AnimatedSprite2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1080, 88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D3:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk1qb"]
_data = {
&"Continue": SubResource("Animation_5dd4i"),
&"Intro": SubResource("Animation_oa1go"),
&"RESET": SubResource("Animation_tbmy8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("5_jk1qb")
region = Rect2(0, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("5_jk1qb")
region = Rect2(445, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("5_jk1qb")
region = Rect2(890, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("5_jk1qb")
region = Rect2(1335, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("5_jk1qb")
region = Rect2(1780, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("5_jk1qb")
region = Rect2(2225, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("5_jk1qb")
region = Rect2(2670, 0, 445, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("5_jk1qb")
region = Rect2(3115, 0, 445, 310)

[sub_resource type="SpriteFrames" id="SpriteFrames_hstxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("6_5dd4i")
region = Rect2(0, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("6_5dd4i")
region = Rect2(240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("6_5dd4i")
region = Rect2(480, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("6_5dd4i")
region = Rect2(720, 0, 240, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_qywvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_oa1go")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 537)
texture = ExtResource("1_l6cm7")

[node name="Untitled" type="Sprite2D" parent="."]
position = Vector2(960, 536)
texture = ExtResource("2_rtw2f")

[node name="Button" type="Sprite2D" parent="."]
position = Vector2(960, 760)
texture = ExtResource("3_oa1go")

[node name="Label" type="Label" parent="Button"]
offset_left = -312.0
offset_top = -56.0
offset_right = 312.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("4_tbmy8")
theme_override_font_sizes/font_size = 120
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Button"]
modulate = Color(1, 1, 1, 0)
offset_left = -336.0
offset_top = -72.0
offset_right = 336.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 120

[node name="Node2D2" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jk1qb")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_tbmy8")
volume_db = 10.876
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_jk1qb")

[node name="Man" type="Node2D" parent="."]
position = Vector2(1704, 704)
script = ExtResource("10_5dd4i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Man"]
position = Vector2(-32, 128)
sprite_frames = SubResource("SpriteFrames_hstxw")
autoplay = "default"
frame = 3
frame_progress = 0.284272

[node name="fren" type="Node2D" parent="."]
position = Vector2(920, 736)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="fren"]
position = Vector2(-1080, 88)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"walk"
autoplay = "walk"

[node name="CPUParticles2D" parent="." instance=ExtResource("11_lgwnu")]
position = Vector2(928, 832)
emitting = false

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lgwnu")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(928, 832)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("12_flqon")

[connection signal="pressed" from="Button/Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
